--- a/src/app.scss
+++ b/src/app.scss
@@ -13,7 +13,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "WorkSansBlack", sans-serif;
+  font-family: "WorkSansRegular", sans-serif;
   font-size: 16px;
   line-height: 1.6em;
   letter-spacing: .5px;
