--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,23 +1,52 @@
-.footerContainer {
-  color: rgba(255,255,255,.4);
-  background-color: #201a16;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
+.footer-container {
+  background-color: #ffffff;
+  box-shadow: 0 -1px 0 0 #ebebeb;
 }
 
-.footerInner {
-  line-height: 1.6em;
-  padding: 64px 32px;
-  max-width: 1020px;
-  width: auto;
+.footer-inner {
+  display: grid;
+  grid-template-columns: auto auto auto auto auto auto;
+  width: 81%;
   margin: auto;
-  font-family: 'Sintony', sans-serif;
+  padding: 72px 0;
+}
+
+.box1 {
+  grid-column-end: span 1;
+}
+
+.box2 {
+  grid-column-end: span 3;
+  display: grid;
+  grid-template-columns: auto auto auto auto auto;
+  padding: 40px 100px;
+}
+
+.footer-link {
   font-size: 14px;
-  text-transform: uppercase;
-  text-decoration: none;
-  letter-spacing: 2px;
-  font-weight: 400;
+  font-weight: 500;
   font-style: normal;
-  color: rgba(255,255,255,.9);
-  text-align: center;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #6d6f7b;
+  text-transform: uppercase;
+}
+
+.box3 {
+  grid-column-end: span 2;
+  padding: 40px 0;
+}
+
+.bloxoffice-footer {
+  width: 176px;
+  height: 97px;
+}
+
+.footer-share-icons {
+  width: 20px;
+  height: 14px;
+  float: left;
+  margin-right: 15px;
 }
