--- a/src/components/WhitePaperInfo/WhitePaperInfo.scss
+++ b/src/components/WhitePaperInfo/WhitePaperInfo.scss
@@ -20,6 +20,7 @@
   border: solid 1px #ffffff;
   padding: 20px 30px 20px 50px;
   background: transparent;
+  cursor: pointer;
 }
 
 .download-btn-text {
