--- a/src/components/WhitelistInfo/WhitelistInfo.scss
+++ b/src/components/WhitelistInfo/WhitelistInfo.scss
@@ -39,3 +39,53 @@
   color: #5b5e6d;
   text-transform: uppercase;
 }
+
+.email-form {}
+
+.email-input {
+  display: inline-block;
+  width: 290px;
+  height: 17px;
+  border-radius: 4px;
+  border: solid 1px #ebebeb;
+  padding: 15px 17px;
+  font-size: 15px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #5b5e6d;
+  margin-right: 14px;
+}
+
+.whitelist-btn {
+  display: inline-block;
+  width: 172px;
+  height: 50px;
+  border-radius: 4px;
+  border: solid 1px #bf343e;
+  padding: 16px 30px;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.29;
+  letter-spacing: normal;
+  text-align: left;
+  color: #bf343e;
+  cursor: pointer;
+}
+
+.pre-sales-label {
+  margin: 45px 15px 0;
+  font-size: 22px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #9b9b9b;
+}
