--- a/src/components/WhitelistInfo/WhitelistInfo.scss
+++ b/src/components/WhitelistInfo/WhitelistInfo.scss
@@ -44,7 +44,7 @@
 
 .email-input {
   display: inline-block;
-  width: 290px;
+  width: 220px;
   height: 17px;
   border-radius: 4px;
   border: solid 1px #ebebeb;
@@ -62,11 +62,11 @@
 
 .whitelist-btn {
   display: inline-block;
-  width: 172px;
-  height: 50px;
+  width: 140px;
+  height: 47px;
   border-radius: 4px;
   border: solid 1px #bf343e;
-  padding: 16px 30px;
+  /*padding: 16px 30px; */
   font-size: 14px;
   font-weight: normal;
   font-style: normal;
