mobile responsiveness for whitelistInfo and platformInfo

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -51,3 +51,12 @@
   float: left;
   margin-right: 15px;
 }
+
+@media only screen
+and (min-device-width: 320px)
+and (max-device-width: 667px)
+and (-webkit-min-device-pixel-ratio: 2) {
+  .footer-container {
+    display: none;
+  }
+}
