--- a/src/components/WhitePaperInfo/WhitePaperInfo.scss
+++ b/src/components/WhitePaperInfo/WhitePaperInfo.scss
@@ -43,3 +43,12 @@
 .download-player-container {
   padding-top: 100px;
 }
+
+@media only screen
+and (min-device-width: 320px)
+and (max-device-width: 667px)
+and (-webkit-min-device-pixel-ratio: 2) {
+  .whitepaper-info {
+    display: none;
+  }
+}
