--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -49,3 +49,16 @@
 .link-items {
   cursor: pointer;
 }
+
+@media only screen
+and (min-device-width: 320px)
+and (max-device-width: 667px)
+and (-webkit-min-device-pixel-ratio: 2) {
+  .header-container {
+    height: auto;
+  }
+
+  .header-content {
+    grid-template-columns: auto;
+  }
+}
