--- a/src/components/Team/Team.scss
+++ b/src/components/Team/Team.scss
@@ -90,3 +90,12 @@
 .mail-icon {
   margin-right: 10px;
 }
+
+@media only screen
+and (min-device-width: 320px)
+and (max-device-width: 667px)
+and (-webkit-min-device-pixel-ratio: 2) {
+  .team-container {
+    display: none;
+  }
+}
