--- a/src/components/TokenomicsInfo/TokenomicsInfo.scss
+++ b/src/components/TokenomicsInfo/TokenomicsInfo.scss
@@ -80,3 +80,12 @@
 .donut-container {
   padding: 100px 0;
 }
+
+@media only screen
+and (min-device-width: 320px)
+and (max-device-width: 667px)
+and (-webkit-min-device-pixel-ratio: 2) {
+  .ti-container {
+    display: none;
+  }
+}
