--- a/src/components/WhitePaperInfo/WhitePaperInfo.scss
+++ b/src/components/WhitePaperInfo/WhitePaperInfo.scss
@@ -49,6 +49,15 @@ and (min-device-width: 320px)
 and (max-device-width: 667px)
 and (-webkit-min-device-pixel-ratio: 2) {
   .whitepaper-info {
-    display: none;
+    grid-template-columns: auto;
+  }
+
+  .video-player {
+    width: 90%;
+    margin: auto;
+  }
+
+  .download-player-container {
+    padding-top: 30px;
   }
 }
