--- a/src/components/TokenomicsInfo/TokenomicsInfo.scss
+++ b/src/components/TokenomicsInfo/TokenomicsInfo.scss
@@ -85,7 +85,16 @@
 and (min-device-width: 320px)
 and (max-device-width: 667px)
 and (-webkit-min-device-pixel-ratio: 2) {
-  .ti-container {
-    display: none;
+  .ti-content {
+    grid-template-columns: auto;
+  }
+
+  .logo-container, .donut-container, .stats-container {
+    padding: 20px 0;
+  }
+
+  .tokenomics-txt {
+    top: 20px;
+    left: 160px;
   }
 }
