--- a/src/components/Team/Team.scss
+++ b/src/components/Team/Team.scss
@@ -25,9 +25,11 @@
 }
 
 .member-photo {
-  width: 355px;
+  width: 100%;
+  max-width: 355px;
   height: 320px;
   display: block;
+  margin: auto;
 }
 
 .member-content {
@@ -35,6 +37,9 @@
   background-color: #ffffff;
   border: solid 1px rgba(151, 151, 151, 0.1);
   text-align: left;
+  width: calc(100% - 112px);
+  max-width: 244px;
+  margin: auto;
 }
 
 .member-name {
@@ -93,16 +98,17 @@
 
 @media only screen
 and (min-device-width: 320px)
-and (max-device-width: 667px)
+and (max-device-width: 1200px)
 and (-webkit-min-device-pixel-ratio: 2) {
   .team-content {
     grid-template-columns: auto;
     width: 90%;
+    justify-content: space-evenly;
   }
 
-  .member-photo {
-    width: 100%;
-  }
+  //.member-photo {
+  //  width: 100%;
+  //}
 
   .member-container {
     margin-bottom: 10px;
