--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Lato');
 @import url('./gridd.scss');
 @import url('../node_modules/react-select/dist/react-select.css');
 @import url('../node_modules/font-awesome/css/font-awesome.min.css');
