--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -64,6 +64,7 @@
     outline: 0;
     font-size: inherit;
     color: inherit;
+    background: transparent;
 
     &:focus {
       outline: none;
