--- a/src/components/InputFields/InputFields.scss
+++ b/src/components/InputFields/InputFields.scss
@@ -1,3 +1,51 @@
 .inputfield-container {
   display: inline-block;
+
+  .input-label {
+    font-size: 14px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: left;
+    color: #9b9b9b;
+    display: block;
+    font-family: WorkSansLight, sans-serif;
+
+    .error {
+      color: #f2596c;
+    }
+  }
+
+  .input-field {
+    width: 100%;
+    height: 40px;
+    border-radius: 3px;
+    background-color: #ffffff;
+    border: solid 1px #e0eaf4;
+    margin: 12px 0 18px 0;
+    font-size: 14px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: left;
+    color: #4a4a4a;
+    padding: 11px;
+
+    &.error-border {
+      border: 1px solid #8f232b;
+    }
+  }
+
+  .error-msg {
+    font-family: WorkSansLight, sans-serif;
+    font-size: 12px;
+    color: #8f232b;
+    margin: 0;
+    position: relative;
+    top: -15px;
+  }
 }
