--- a/src/containers/Signup/Signup.scss
+++ b/src/containers/Signup/Signup.scss
@@ -1,7 +1,7 @@
 .signup-header-container {
   width: 100%;
   background-color: #bf343e;
-  padding: 22px 38px;
+  padding: 22px 0;
 
   .header-title {
     font-family: 'Lato', sans-serif;
@@ -15,10 +15,73 @@
     color: #ffffff;
     text-transform: uppercase;
     margin: 0;
+    padding: 0  38px;
   }
 }
 
 .signup-inputs-container {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: 30% 30%;
+  justify-content: space-around;
+  margin-top: 50px;
+}
+
+.privacy-policy {
+  opacity: 0.58;
+  font-family: WorkSansLight, sans-serif;
+  font-size: 12px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.42;
+  letter-spacing: normal;
+  text-align: center;
+  color: #4a4a4a;
+  margin-top: 18px;
+}
+
+.signup-btn {
+  border-radius: 2px;
+  background-color: #bf343e;
+  padding: 12px 26px;
+  font-size: 14px;
+  font-weight: 600;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #ffffff;
+  display: block;
+  margin: 11px auto;
+  text-transform: uppercase;
+  cursor: pointer;
+  min-width: 110px;
+  text-align: center;
+}
+
+.login-redirect {
+  font-size: 14px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: center;
+  color: #4a4a4a;
+
+  & > a {
+    font-weight: bold;
+    color: #bf343e;
+    text-decoration: none;
+  }
+}
+
+@media only screen
+and (min-device-width: 320px)
+and (max-device-width: 1200px)
+and (-webkit-min-device-pixel-ratio: 2) {
+  .signup-inputs-container {
+    grid-template-columns: 80%;
+    justify-content: center;
+  }
 }
