--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,27 +1,31 @@
 .header-container {
   width: 100%;
-  height: 102px;
+  height: 85px;
   box-shadow: 0 1px 0 0 #ebebeb;
   background-color: #ffffff;
 }
 
 .header-content {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: 1fr 1fr;
   width: 81%;
   margin: auto;
-  padding: 17px 0;
+  padding: 15px 0;
+
+  .icon-bar {
+    background-color: #bf343e;
+  }
 }
 
 .main-logo {
   width: 100px;
-  height: 67.7px;
+  height: 58px;
 }
 
 .links-container {
   display: inline-grid;
   grid-template-columns: auto auto auto auto;
-  padding: 25px 0;
+  padding: 10px 0;
   font-size: 15px;
   font-weight: 500;
   font-style: normal;
@@ -30,6 +34,7 @@
   letter-spacing: normal;
   text-align: left;
   color: #6d6f7b;
+  align-items: center;
 }
 
 .login-btn-container {
@@ -57,25 +62,29 @@
 }
 
 .link-items {
-  cursor: pointer;
-
   .link-btn {
     border: none;
     margin: 0;
     outline: 0;
-    font-size: inherit;
-    color: inherit;
     background: transparent;
+    color: #6d6f7b;
+    font-size: 15px;
+    font-family: worksans-medium, sans-serif;
+    cursor: pointer;
 
     &:focus {
       outline: none;
+    }
+
+    &:hover {
+      color: #bf343e;
     }
   }
 }
 
 @media only screen
-and (min-device-width: 320px)
-and (max-device-width: 1200px)
+and (min-width: 320px)
+and (max-width: 820px)
 and (-webkit-min-device-pixel-ratio: 2) {
   .header-container {
     height: auto;
@@ -87,6 +96,8 @@ and (-webkit-min-device-pixel-ratio: 2) {
 
   .links-container {
     grid-template-columns: auto;
+    height: 0;
+
   }
 
   .link-items {
