--- a/src/containers/Home/components/WhitePaperInfo/WhitePaperInfo.scss
+++ b/src/containers/Home/components/WhitePaperInfo/WhitePaperInfo.scss
@@ -51,8 +51,8 @@
 }
 
 @media only screen
-and (min-device-width: 320px)
-and (max-device-width: 1200px)
+and (min-width: 320px)
+and (max-width: 1200px)
 and (-webkit-min-device-pixel-ratio: 2) {
   .whitepaper-info {
     grid-template-columns: auto;
