--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,6 +3,9 @@
   height: 85px;
   box-shadow: 0 1px 0 0 #ebebeb;
   background-color: #ffffff;
+  position: fixed;
+  top: 0;
+  z-index: 10;
 }
 
 .header-content {
