--- a/src/containers/Home/components/BusinessPlan/BusinessPlan.styles.scss
+++ b/src/containers/Home/components/BusinessPlan/BusinessPlan.styles.scss
@@ -40,26 +40,9 @@
       }
     }
 
-    .user-groups {
-      box-shadow: 0 10px 40px 0 rgba(211, 228, 230, 0.9);
-      background-color: #f7fcfc;
-      border: solid 2px #ffd607;
-      position: relative;
-    }
-
-    .user-groups:before {
-      position: absolute;
-      content: '';
-      width: 2px;
-      height: 106px;
-      border: 1.5px solid #ffc400;
-      top: -108px;
-      left: 27px;
-    }
-
     .plan-circles {
-      width: 60px;
-      height: 60px;
+      width: 52px;
+      height: 48px;
       padding-top: 8px;
       padding-left: 4px;
       margin: 120px auto;
@@ -71,9 +54,26 @@
     .plan-circles:before {
       position: absolute;
       content: '';
-      width: 2px;
+      width: 1px;
       height: 106px;
       border: 1.5px solid #e4eded;
+      top: -108px;
+      left: 27px;
+    }
+
+    .user-groups {
+      box-shadow: 0 10px 40px 0 rgba(211, 228, 230, 0.9);
+      background-color: #f7fcfc;
+      border: solid 2px #ffd607;
+      position: relative;
+    }
+
+    .user-groups:before {
+      position: absolute;
+      content: '';
+      width: 1px;
+      height: 106px;
+      border: 1.5px solid #ffc400;
       top: -108px;
       left: 27px;
     }
@@ -114,6 +114,10 @@
       margin-bottom: 0;
     }
 
+    .plan-circles img {
+      width: 48px;
+    }
+
     .video-playlist .plan-details {
       left: auto;
       right: 100px;
@@ -132,23 +136,35 @@
     }
 
     .video-playlist {
-      padding-top: 7px;
-      padding-left: 7px;
+      padding-top: 0;
+      padding-left: 10px;
+      display: grid;
+      align-items: center;
+      height: 60px;
+      width: 55px;
     }
     .video-playlist img, .movie-ticket img {
       width: 45px;
     }
     .movie-ticket {
-      padding-top: 14px;
-      padding-left: 7px;
+      padding-top: 0;
+      padding-left: 10px;
+      display: grid;
+      align-items: center;
+      height: 60px;
+      width: 55px;
     }
     .refund img {
       width: auto;
       height: 25px;
     }
     .refund {
-      padding-top: 17px;
-      padding-left: 17px;
+      padding-top: 0;
+      padding-left: 18px;
+      display: grid;
+      align-items: center;
+      height: 58px;
+      width: 42px;
     }
     .plan-details {
       position: absolute;
@@ -206,10 +222,6 @@
       border-right: 12px solid #ffffff;
     }
 
-    .plan-circles img {
-      width: 48px;
-    }
-
     .property-platform {
       width: 825px;
       margin: 0 auto;
@@ -244,31 +256,47 @@
 
 @media (min-width: 768px) and (max-width: 991px) {
   .business-plan {
-    padding-top: 50px;
-    padding-bottom: 90px;
+    .container {
+      .business-plan {
+        padding-top: 50px;
+        padding-bottom: 90px;
+      }
+      .property-platform {
+        width: 100%;
+      }
+    }
   }
-  .property-platform {
-    width: 100%;
+
+  .hidden-xs {
+    display: none!important;
   }
 }
 
 @media (max-width:767px) {
-  .plan-title {
-    width: 100%;
+  .business-plan {
+    .container {
+      .plan-title {
+        width: 100%;
+      }
+      .property-platform {
+        width: 100%;
+      }
+      .platform {
+        text-align: center;
+        padding-left: 15px;
+        padding-right: 15px;
+      }
+      .platform .img-responsive {
+        display: inline-block;
+      }
+      .platform-detail {
+        padding-left: 15px;
+        padding-right: 15px;
+      }
+    }
   }
-  .property-platform {
-    width: 100%;
-  }
-  .platform {
-    text-align: center;
-    padding-left: 15px;
-    padding-right: 15px;
-  }
-  .platform .img-responsive {
-    display: inline-block;
-  }
-  .platform-detail {
-    padding-left: 15px;
-    padding-right: 15px;
+
+  .hidden-xs {
+    display: none!important;
   }
 }
