Fixes images with proper resolution

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -58,6 +58,7 @@ and (max-width: 1200px)
 and (-webkit-min-device-pixel-ratio: 2) {
   .footer-inner {
     grid-template-columns: auto;
+    justify-content: center;
   }
 
   .box2 {
