--- a/src/components/InputFields/InputFields.scss
+++ b/src/components/InputFields/InputFields.scss
@@ -34,6 +34,11 @@
     text-align: left;
     color: #4a4a4a;
     padding: 11px;
+    box-sizing: border-box;
+
+    &:focus {
+      outline: none;
+    }
 
     &.error-border {
       border: 1px solid #8f232b;
