--- a/src/containers/Home/Home.style.scss
+++ b/src/containers/Home/Home.style.scss
@@ -14,3 +14,64 @@
   height: 16px;
   background-color: #bf343e;
 }
+
+.modal-fade-in {
+  transition: opacity .15s linear;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1040;
+  background-color: #000;
+  opacity: .5;
+  display: block;
+
+  &.close {
+    opacity: 0;
+    z-index: -1;
+  }
+}
+
+.modal-box {
+  transition: opacity .15s linear;
+  box-sizing: border-box;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1050;
+  outline: 0;
+  opacity: 1;
+  overflow-x: hidden;
+  overflow-y: auto;
+  display: block;
+
+  &.close {
+    opacity: 0;
+    z-index: -1;
+  }
+}
+
+.modal-dialog {
+  position: relative;
+  width: auto;
+  margin: 10px;
+  background-color: #ffffff;
+
+  .modal-close-btn {
+    color: #ffffff;
+    position: absolute;
+    right: 15px;
+    top: 25px;
+    cursor: pointer;
+  }
+}
+
+@media (min-width: 768px) {
+  .modal-dialog {
+    width: 600px;
+    margin: 30px auto;
+  }
+}
