--- a/src/containers/Dashboard/Dashboard.style.scss
+++ b/src/containers/Dashboard/Dashboard.style.scss
@@ -2,6 +2,7 @@
   width: 100%;
   min-height: 100vh;
   background-color: #fcfbfc;
+  padding-top: 100px;
 
   .bbtc-details-container {
     width: 80%;
