--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -75,6 +75,14 @@
   }
 }
 
+.profile-pic-container {
+  .profile-pic {
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+  }
+}
+
 .link-items {
   .link-btn {
     border: none;
@@ -99,6 +107,20 @@
 
 .menu-icon-btn {
   display: none;
+}
+
+.user-menu-container {
+  position: absolute;
+  right: 9%;
+  top: 70px;
+  background-color: #ffffff;
+  border: 1px solid #ebebeb;
+
+  .signout-btn {
+    cursor: pointer;
+    padding: 10px 30px;
+    box-sizing: border-box;
+  }
 }
 
 @media only screen
