--- a/src/containers/Dashboard/Dashboard.style.scss
+++ b/src/containers/Dashboard/Dashboard.style.scss
@@ -3,6 +3,20 @@
   min-height: 100vh;
   background-color: #fcfbfc;
   padding-top: 100px;
+  box-sizing: border-box;
+  display: grid;
+  align-content: center;
+
+  .coming-soon-text {
+    font-size: 32px;
+    font-weight: 500;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: center;
+    color: #27272e;
+  }
 
   .bbtc-details-container {
     width: 80%;
