latest animations for homepage

--- a/src/containers/Dashboard/Dashboard.style.scss
+++ b/src/containers/Dashboard/Dashboard.style.scss
@@ -16,6 +16,7 @@
     letter-spacing: normal;
     text-align: center;
     color: #27272e;
+    margin-bottom: 8%;
   }
 
   .bbtc-details-container {
