--- a/src/components/Timer/Timer.scss
+++ b/src/components/Timer/Timer.scss
@@ -8,11 +8,14 @@
   text-align: left;
   color: #5b5e6d;
   font-family: WorkSansLight, sans-serif;
-  margin: 15px;
+  margin-left: 0;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .timer-labels {
-  margin: 0;
+  //margin: 0;
+  margin-left: -15px;
   position: relative;
   font-size: 16px;
   font-weight: 300;
