--- a/src/containers/Home/components/WhitelistInfo/WhitelistInfo.scss
+++ b/src/containers/Home/components/WhitelistInfo/WhitelistInfo.scss
@@ -89,7 +89,7 @@
 }
 
 .pre-sales-label {
-  margin: 45px 15px 0;
+  margin: 45px 0 0;
   font-size: 22px;
   font-family: worksans-medium, sans-serif;
   font-weight: normal;
