--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -52,6 +52,12 @@
   margin-right: 15px;
 }
 
+.footer-share-icons-1 {
+  width: 20px;
+  height: 15.8px;
+  float: left;
+}
+
 @media only screen
 and (min-width: 320px)
 and (max-width: 1200px)
