--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -90,8 +90,8 @@
     outline: 0;
     background: transparent;
     color: #6d6f7b;
-    font-size: 15px;
-    font-family: worksans-medium, sans-serif;
+    font-size: 15px;    
+    font-family: 'Work Sans', sans-serif;
     cursor: pointer;
 
     &:focus {
