--- a/src/components/Timer/Timer.scss
+++ b/src/components/Timer/Timer.scss
@@ -7,7 +7,7 @@
   letter-spacing: normal;
   text-align: left;
   color: #5b5e6d;
-  font-family: WorkSansLight, sans-serif;
+  font-family: 'Work Sans', sans-serif;
   margin-left: 0;
   margin-top: 15px;
   margin-bottom: 15px;
@@ -15,7 +15,7 @@
 
 .timer-labels {
   //margin: 0;
-  margin-left: -15px;
+  margin-left: -27px;
   position: relative;
   font-size: 16px;
   font-weight: 300;
@@ -25,7 +25,7 @@
   letter-spacing: normal;
   text-align: left;
   color: #5b5e6d;
-  font-family: WorkSansLight, sans-serif;
+  font-family: 'Work Sans', sans-serif;
 }
 
 .days-label {
