--- a/src/containers/Home/components/Team/Team.scss
+++ b/src/containers/Home/components/Team/Team.scss
@@ -1,9 +1,11 @@
 .team-container {
-  background-color: #fcfcfc;
   border: solid 1px rgba(151, 151, 151, 0.09);
+  //width: 1440px;
+  height: auto;
+  background-color: #f7fcfc;
 }
 
-.team-heading {
+.team-heading1 {
   text-align: center;
   font-size: 24px;
   font-weight: 500;
@@ -15,6 +17,22 @@
   margin: 30px 0;
 }
 
+.team-heading  {
+  padding: 20px;
+  text-align: center;
+  //width: 127px;
+  height: 28px;
+  font-family: 'Work Sans', sans-serif;
+  font-size: 24px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  //text-align: left;
+  color: #453937;
+}
+
 .team-content {
   display: grid;
   grid-template-columns: 30% 30% 30%;
@@ -24,7 +42,28 @@
   margin-bottom: 70px;
 }
 
-.member-photo {
+.Background {
+  width: 262px;
+  height: 423px;
+  background-color: #f7fcfc;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.11);
+}
+
+.Background:hover {
+  width: 262px;
+  height: 423px;
+  background-color: #bf343e;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.11);
+
+  .member-role{
+    color:#ffffff;
+  }
+  .member-name{
+    color:#ffffff;
+  }
+}
+
+.member-photo1 {
   width: 100%;
   max-width: 355px;
   height: 320px;
@@ -32,18 +71,24 @@
   margin: auto;
 }
 
+.member-photo {
+  width: 262px;
+  height: 295px;
+  object-fit: contain;
+}
+
 .member-content {
-  padding: 50px 55px 70px;
-  background-color: #ffffff;
-  border: solid 1px rgba(151, 151, 151, 0.1);
+  //padding: 50px 55px 70px;
+  //background-color: #ffffff;
+  //border: solid 1px rgba(151, 151, 151, 0.1);
   text-align: left;
-  width: calc(100% - 112px);
+  //width: calc(100% - 112px);
   max-width: 244px;
   margin: auto;
   height: 236px;
 }
 
-.member-name {
+.member-name1 {
   font-size: 22px;
   font-weight: 500;
   font-style: normal;
@@ -55,7 +100,23 @@
   margin-bottom: 8px;
 }
 
-.member-role {
+
+.member-name {
+  //width: 175px;
+  //height: 24px;
+  font-family: 'Work Sans', sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: center;
+  color:#000000; //#ffffff;
+  //color: var(--white);
+}
+
+.member-role1 {
   font-size: 12px;
   font-weight: normal;
   font-style: normal;
@@ -63,8 +124,31 @@
   line-height: normal;
   letter-spacing: 2.9px;
   color: #9fa3a7;
-  font-family: WorkSansLight, sans-serif;
+    font-family: 'Work Sans', sans-serif;
   margin: 0 0 30px;
+}
+
+.Shape {
+  width: 18px;
+  height: 18px;
+  background-color: #ffffff;
+  background-color: var(--white);
+  padding-left: 45%;
+}
+
+.member-role  {
+  //width: 41px;
+  height: 14px;
+    font-family: 'Work Sans', sans-serif;
+  font-size: 12px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: 2.9px;
+  text-align: center;
+  color: #ffffff;
+  color: var(--white);
 }
 
 .member-desc {
