latest homepage fixes

--- a/src/containers/Home/components/WhitePaperInfo/WhitePaperInfo.scss
+++ b/src/containers/Home/components/WhitePaperInfo/WhitePaperInfo.scss
@@ -22,6 +22,7 @@
   padding: 20px 30px 20px 50px;
   background: transparent;
   cursor: pointer;
+  background-color: #fad356;
 }
 
 .download-btn-text {
@@ -32,7 +33,7 @@
   line-height: normal;
   letter-spacing: normal;
   text-align: left;
-  color: #f9cb31;
+  color: #ffffff;
   margin-right: 10px;
 }
 
