--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,3 +1,4 @@
+
 .header-container {
   width: 100%;
   height: 85px;
@@ -48,11 +49,17 @@
   }
 }
 
+.login-btn-container:hover {
+  background-color: #ffffff;
+  //color: #6d6f7b;
+}
+
 .login-btn-container {
   border-radius: 5px;
-  border: solid 1px #323648;
+  border: solid 1px #bf343e;
   box-sizing: border-box;
   cursor: pointer;
+  background-color: #bf343e;
 
   p {
     padding: 8px 18px;
@@ -62,15 +69,18 @@
     font-stretch: normal;
     line-height: normal;
     letter-spacing: normal;
-    color: #6d6f7b;
+    //color: #6d6f7b;
+    color: #ffffff;
     text-align: center;
     box-sizing: border-box;
     cursor: pointer;
     margin: 0;
 
     &:hover {
-      background-color: #bf343e;
-      color: #fff;
+      background-color: #ffffff;
+      color: #6d6f7b;
+      border-radius: 5px;
+      border: solid 1px #bf343e;
     }
   }
 }
@@ -90,7 +100,7 @@
     outline: 0;
     background: transparent;
     color: #6d6f7b;
-    font-size: 15px;    
+    font-size: 15px;
     font-family: 'Work Sans', sans-serif;
     cursor: pointer;
 
