--- a/src/components/Timer/Timer.scss
+++ b/src/components/Timer/Timer.scss
@@ -15,7 +15,7 @@
 
 .timer-labels {
   //margin: 0;
-  margin-left: -27px;
+  //margin-left: -27px;
   position: relative;
   font-size: 16px;
   font-weight: 300;
@@ -31,19 +31,19 @@
 .days-label {
   display: inline-block;
   position: relative;
-  left: 28px;
+  left: 0px;
 }
 
 .hours-label {
   display: inline-block;
   position: relative;
-  left: 60px;
+  left: 48px;
 }
 
 .mins-label {
   display: inline-block;
   position: relative;
-  left: 98px;
+  left: 90px;
 }
 
 .secs-label {
