--- a/src/containers/Home/components/BusinessPlan/BusinessPlan.styles.scss
+++ b/src/containers/Home/components/BusinessPlan/BusinessPlan.styles.scss
@@ -1,3 +1,17 @@
+.busInfoImgCs {
+  padding-left: 12px;
+  padding-top: 12px;
+}
+
+.busInfoImg {
+  padding-left: 12px;
+  padding-top: 12px;
+}
+
+.busInfoImgtkt {
+  padding-left: 12px;
+  padding-top: 18px;
+}
 
 .icons8-intelligence-80 {
   width: 70px;
@@ -88,17 +102,11 @@
 
 .tooltip .tooltiptext {
     visibility: hidden;
-    //width: 120px;
-    //background-color: black;
-    //color: #ffffff;
     text-align: left;
     border-radius: 6px;
-    padding: 5px 0;
-
-    /* Position the tooltip */
-    //position: absolute;
+    //padding: 5px 0;
     z-index: 1;
-    //animation: bounce 1s;
+    padding-left: 3px;
 }
 
 .tooltip:hover .tooltiptext {
@@ -201,10 +209,10 @@
     }
 
     .plan-circles {
-      width: 52px;
-      height: 48px;
-      padding-top: 8px;
-      padding-left: 4px;
+      width: 60px;
+      height: 60px;
+      //padding-top: 8px;
+      //padding-left: 4px;
       margin: 120px auto;
       border-radius: 50%;
       position: relative;
@@ -215,10 +223,10 @@
       position: absolute;
       content: '';
       width: 1px;
-      height: 106px;
+      height: 114px;
       border: 1.5px solid #e4eded;
-      top: -108px;
-      left: 27px;
+      top: -119px;
+      left: 28px;
     }
 
     .user-groups:hover {
@@ -228,7 +236,7 @@
       box-shadow: 0 10px 40px 0 rgba(211, 228, 230, 0.9);
       background-color: #f7fcfc;
       //border: solid 2px #ffd607;
-      border: solid 2px #ffffff;
+      border: solid 2px #e4eded;
       position: relative;
     }
 
@@ -236,11 +244,13 @@
       position: absolute;
       content: '';
       width: 1px;
-      height: 106px;
-      border: 1.5px solid #ffffff;
+      height: 103px;
+      border: 1.5px solid #e4eded;//#ffffff;
       top: -108px;
-      left: 27px;
+      left: 28px;
     }
+
+
     .plan-details {
       position: absolute;
       top: -35px;
@@ -326,7 +336,7 @@
     }
 
     .plan-circles img {
-      width: 48px;
+      width: 35px;
     }
 
     .video-playlist .plan-details {
@@ -347,12 +357,9 @@
     }
 
     .video-playlist {
-      padding-top: 0;
-      padding-left: 10px;
-      display: grid;
       align-items: center;
       height: 60px;
-      width: 55px;
+      width: 60px;
       box-shadow: 0 10px 40px 0 rgba(211, 228, 230, 0.9);
       background-color: #f7fcfc;
       //border: solid 2px #ffd607;
@@ -360,9 +367,8 @@
       position: relative;
     }
     .video-playlist img, .movie-ticket img {
-      width: 45px;
-      color: #ffd00b;
-
+      width: 35px;
+      //color: #6d6f7b;
     }
 
     .video-playlist:hover {
@@ -374,12 +380,12 @@
     }
 
     .movie-ticket {
-      padding-top: 0;
-      padding-left: 10px;
-      display: grid;
+      //padding-top: 0;
+      //padding-left: 10px;
+      //display: grid;
       align-items: center;
       height: 60px;
-      width: 55px;
+      width: 60px;
       box-shadow: 0 10px 40px 0 rgba(211, 228, 230, 0.9);
       background-color: #f7fcfc;
       //border: solid 2px #ffd607;
