--- a/src/containers/Home/components/Team/Team.scss
+++ b/src/containers/Home/components/Team/Team.scss
@@ -1,3 +1,8 @@
+.teamImg {
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
+}
+
 .team-container {
   border: solid 1px rgba(151, 151, 151, 0.09);
   //width: 1440px;
@@ -36,7 +41,7 @@
 .team-content {
   display: grid;
   grid-template-columns: 30% 30% 30%;
-  width: 81%;
+  width: 90%;
   margin: auto;
   justify-content: space-between;
   margin-bottom: 70px;
@@ -46,7 +51,8 @@
   width: 262px;
   height: 423px;
   background-color: #f7fcfc;
-  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.11);
+  //box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.11);
+  margin-bottom: 15px;
 }
 
 .Background:hover {
@@ -54,6 +60,7 @@
   height: 423px;
   background-color: #bf343e;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.11);
+  margin-bottom: 15px;
 
   .member-role{
     color:#ffffff;
@@ -74,7 +81,7 @@
 .member-photo {
   width: 262px;
   height: 295px;
-  object-fit: contain;
+  //object-fit: contain;
 }
 
 .member-content {
@@ -85,7 +92,7 @@
   //width: calc(100% - 112px);
   max-width: 244px;
   margin: auto;
-  height: 236px;
+  //height: 236px;
 }
 
 .member-name1 {
