--- a/src/containers/Home/components/WhitePaperInfo/WhitePaperInfo.scss
+++ b/src/containers/Home/components/WhitePaperInfo/WhitePaperInfo.scss
@@ -4,8 +4,8 @@
   display: grid;
   grid-template-columns: auto auto;
   justify-content: space-around;
-  padding: 44px;
-  margin-top: 4px;
+  padding: 45px;
+  padding-top: 120px;
 }
 
 .video-player {
